# mcp-jina-reader

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  main.py  pyproject.toml
mcp_jina_reader/: __init__.py  main.py
