[project]
name = "mcp-jina-fetch"
version = "0.1.0"
description = "基于 MCP 的 Jina AI 搜索和阅读服务封装"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "jina", "ai", "search", "reader"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-jina-reader"
Repository = "https://github.com/yourusername/mcp-jina-reader.git"
"Bug Tracker" = "https://github.com/yourusername/mcp-jina-reader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_jina_reader"]
